Updates for new REST Data Lattice API
